Kubernetes/appdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
spec:
  selector:
    matchLabels:
      app: application
  replicas: 1
  template:
    metadata:
      labels:
        app: application
    spec:
      containers:
      - name: application-container
        image: trpman/dockerpj1_app
        ports:
        - name: application-port
          containerPort: 8080
      # This will make app container deploy after all backend come up
