Kubernetes/dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: myapp-container
        image: trpman/dockerpj1_db
        ports:
        - name: mysql-port
          containerPort: 3306
        volumeMounts:
        - name: mysql-pvc-data
          mountPath: /var/lib/mysql

      volumes:
      - name: mysql-pvc-data
        persistentVolumeClaim:
          claimName: mysql-pvc

      # Need to make sure that /var/lib/mysql is empty
      # so initContainer will delete lost+found before mysql start and it will terminated
