Kubernetes/appservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp
spec:
  ports:
  - port: 8080
    targetPort: app-port
    protocol: TCP
  selector:
    app: application
  type: ClusterIP
