Kubernetes/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  # this is mandatory because in project it mention this name
  name: vprocache01
spec:
  ports:
  - port: 11211
    targetPort: memcached-port
    protocol: TCP
  selector:
    app: memcache
  type: ClusterIP
