Kubernetes/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  # this is mandatory because in project it mention this name
  name: vpromq01
spec:
  ports:
  - port: 5672
    targetPort: rabbitmq-port
    protocol: TCP
  selector:
    app: rabbitmq
  type: ClusterIP
