Kubernetes/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: app.agsfva.online
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vproapp
            port: 
              number: 8080
